# microsoft-365-backup-tools

./: .env.dataverse.example  .env.example  .env.exchange.example  .env.sharepoint.example  .gitignore  DATAVERSE_README.md  EXCHANGE_APP_REGISTRATION_GUIDE.md  EXCHANGE_BACKUP_IMPLEMENTATION_PLAN.md  INCREMENTAL_BACKUP_README.md  OPTIMIZATION_README.md  PERFORMANCE_OPTIMIZATION.md  README.md  SHAREPOINT_APP_REGISTRATION_GUIDE.md  checksum_db.py  checksum_db_enhanced.py  dataverse_backup.py  dataverse_requirements.txt  diagnose_sharepoint_access.py  exchange_backup.py  exchange_checksum_db.py  exchange_incremental_backup.py  exchange_incremental_optimized.py  final_sharepoint_test.py  get_service_principal.py  grant_sharepoint_access.ps1  pyproject.toml  quick_sharepoint_test.py  rebuild_databases.py  requirements.txt  sharepoint-renamer.md  sharepoint_app_permission.xml  sharepoint_backup_user_auth.py  sharepoint_cleanup_structur.py  sharepoint_graph_backup.py  sharepoint_incremental_backup.py  sharepoint_incremental_backup_optimized.py  sharepoint_incremental_optimized.py  sundbusserne.env  sundbusserne.env.example  tenant_wide_backup_solution.md  (+9 more)
ARCHIVE/: EXCHANGE_INCREMENTAL_BACKUP_README.md  check_app_permissions.py  decode_permissions.py  demo_uv_project.py  exchange_incremental_backup_example.sh  grant_access_final.ps1  implement_solution1.py  modern_sharepoint_solution.md  sharepoint_backup.log.xz  sharepoint_backup.py  sharepoint_backup_user.log.xz  sharepoint_graph_backup.log.xz  sharepoint_incremental_backup.log.xz  sharepoint_incremental_backup.py  test_ready.db  (+8 more)
(+212 files in other folders)
